encapsulating some functions, left text align on description paragraphs for entries on mobile, link fixed for portfolio in footer

--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,8 @@ h1 {
   text-shadow: 0 -1px 0 #ffffff, 0 1px 0 #2e2e2e, 0 2px 0 #2c2c2c, 0 3px 0 #2a2a2a, 0 4px 0 #282828, 0 5px 0 #262626, 0 6px 0 #242424, 0 7px 0 #222222, 0 8px 0 #202020, 0 9px 0 #1e1e1e, 0 10px 0 #1c1c1c, 0 11px 0 #1a1a1a, 0 12px 0 #181818, 0 13px 0 #161616, 0 14px 0 #141414, 0 15px 0 #121212, 0 22px 30px rgba(0, 0, 0, 0.9);
 }
 
+/* Divider effect creates a dividing line below the element with the class */
+
 .divider {
   display: inline-block;
 }
@@ -397,6 +399,8 @@ header {
     /* maintain height of header */
     background: #1b242f;
     background-image: linear-gradient(160deg, #9d565b 0%, #1b242f 100%);
+    /* Animate the sticking to the top of the page */
+    transition: 0.3s all;
 }
 
 .logo {
@@ -543,6 +547,8 @@ blockquote img {
 .hero img {
   width: 9em;
 }
+
+/* Creates a sort of moving background effect */
 
 @keyframes AnimatedBG {
   0% {background-position: 0 47%;}
@@ -1015,6 +1021,9 @@ h3.project-heading {
 
     .md-left-text {
       text-align: left;
+    }
+    .md-center-text {
+      text-align: center;
     }
 
     /* Summary */
